# stl_compatible_set

./: CMakeLists.txt  README.md  coverage.info
.github/workflows/: ci.yml
examples/: base_test_set.cpp  example_1.cpp
include/: set.h  set.hpp  tree.hpp
scripts/: build.sh
tests/: CMakeLists.txt  base_test_set.cpp  test_set.cpp  test_timings.cpp  test_tree.cpp
